--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
 :root{
     --main-color:#443;
     --border-radius:95% 4% 97% 5%/4% 94% 3% 95%;
