--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,11 @@
-
 :root{
     --main-color:#443;
     --border-radius:95% 4% 97% 5%/4% 94% 3% 95%;
     --border-radius-hover:4% 95% 6% 95%/95% 4% 92% 5%;
     --border:.2rem solid var(--main-color);
     --border-hover:.2rem dashed var(--main-color);
-}
-/* On screens that are 992px wide or less, go from four columns to two columns */
-@media screen and (max-width: 992px) {
-  .column {
-    width: 50%;
-  }
-}
 
-/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-  }
-
+}
 
 *{
     font-family: 'Poppins', sans-serif;
@@ -48,6 +35,7 @@ section{
 
 }
 .heading{
+    float:center;
     font-size: 9rem;
     text-transform: uppercase;
     color:transparent;
@@ -61,11 +49,12 @@ section{
 
 
 .heading span{
+    float: Center;
     position: absolute;
     top:50%; left:50%;
     transform: translate(-50%, -50%);
     width: 100%;
-    color:black;
+    color:var(--main-color);
     font-size: 3rem;
 
 }
@@ -124,9 +113,6 @@ section{
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
   float: left;
-  width: 33.33%;
+  width: 50%;
   padding: 5px;
 }
-
-
-
